# micrograd_rs

./: Cargo.toml  README.md
examples/: binary_classifier.rs  plane_classifier.rs  simple_gradient.rs
src/: lib.rs
