[package]
name = "micrograd"
version = "0.1.0"
authors = ["duanjp8617 <duanjp8617@gmail.com>"]
description = "Implement karpathy/micrograd in rust."
homepage = "https://github.com/duanjp8617/micrograd_rs"
repository = "https://github.com/duanjp8617/micrograd_rs"
readme = "README.md"
edition = "2021"

[dependencies]
rand = "0.9"

[[example]]
name = "simple_gradient"
path = "examples/simple_gradient.rs"

[[example]]
name = "binary_classifer"
path = "examples/binary_classifer.rs"
